Fix: Text alignment

--- a/css/e20r-activity.css
+++ b/css/e20r-activity.css
@@ -68,7 +68,7 @@ div.e20r-exercise-description {
 }
 div.first-column {
     float: left;
-    text-align: right;
+    /* text-align: right; */
 }
 div.second-column {
     float: right;
